# libcollector

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  burrow.cpp  ferret.py  ferret1to2.py  interface.cpp  interface.hpp  test.cpp
.github/workflows/: cmake.yml
android/gradle/: build.gradle
android/gradle/collector_android/: CMakeLists.txt  build.gradle
android/gradle/gradle/wrapper/: gradle-wrapper.properties
android/gradle/layer_android/: CMakeLists.txt  build.gradle
android/jni/: Android.mk  Application.mk
collectors/: collector_utility.cpp  collector_utility.hpp  ferret.cpp  gpufreq.cpp  perf.cpp  perf.hpp  power.cpp
layer/: VkLayer_libcollector.json  libcollector_config.json  vulkan_layer.cpp  vulkan_layer.hpp
